--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,6 +8,8 @@ phases:
     commands:
       - echo Logging in to Amazon ECR...
       - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
+      - echo Running composer install in the service directory...
+      - cd service && composer install --no-dev
   build:
     commands:
       - echo Building the Docker image for ARM architecture...
