Update buildspec.yml and .env.example
This commit updates the buildspec.yml file to include a sed command for updating the APP_KEY in the .env file. It also updates the .env.example file by adding an empty APP_KEY variable.

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,7 +11,9 @@ phases:
       - echo Logging in to Amazon ECR...
       - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
       - echo Running composer install in the service directory...
-      - cd service && composer install --no-dev && cp .env.example .env && echo "APP_KEY=$APP_KEY" >> .env && cd ../  # .env ファイルに APP_KEY を追加
+      - cd service && composer install --no-dev && cp .env.example .env
+      - sed -i "s/APP_KEY=.*/APP_KEY=$APP_KEY/" .env
+      - cd ../
   build:
     commands:
       - echo Building the Docker image for ARM architecture...
