Update buildspec.yml with composer install and environment variable changes

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,9 +11,14 @@ phases:
       - echo Logging in to Amazon ECR...
       - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
       - echo Running composer install in the service directory...
-      - cd service && composer install --no-dev && cp .env.example .env
+      - cd service
+      - composer install --no-dev
+      - cp .env.example .env
+      - pwd  # 現在のディレクトリを表示
+      - ls -l  # ファイルリストを表示
+      - echo "APP_KEY value: $APP_KEY"  # APP_KEY の値を確認
       - sed -i "s/APP_KEY=.*/APP_KEY=$APP_KEY/" .env
-      - cd ../
+      - cd ..
   build:
     commands:
       - echo Building the Docker image for ARM architecture...
