--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,7 +17,7 @@ phases:
       - pwd  # 現在のディレクトリを表示
       - ls -l  # ファイルリストを表示
       - echo "APP_KEY value: $APP_KEY"  # APP_KEY の値を確認
-      - sed -i "s/APP_KEY=.*/APP_KEY=$APP_KEY/" .env
+      - sed -i "s|APP_KEY=.*|APP_KEY=$APP_KEY|" .env 
       - cd ..
   build:
     commands:
