--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,8 @@ services:
     depends_on:
       - php
   php:
-    image: 720749898583.dkr.ecr.ap-northeast-1.amazonaws.com/php:dev-test
+    image: 720749898583.dkr.ecr.ap-northeast-1.amazonaws.com/php:v1.3
+    platform: linux/amd64
     container_name: app
     # volumes:
     #   - ./service:/var/www/html
