--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,14 @@
 version: "3.8"
 services:
   web:
-    image: nginx:latest
+    image: app-nginx
+    platform: linux/amd64
     container_name: web
     ports:
       - "80:80"
-    volumes:
-      - ./config/nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - ./service:/var/www/html
-    depends_on:
-      - php
   php:
-    image: 720749898583.dkr.ecr.ap-northeast-1.amazonaws.com/php:v1.3
+    image: 720749898583.dkr.ecr.ap-northeast-1.amazonaws.com/php:v1.2
     platform: linux/amd64
     container_name: app
-    # volumes:
-    #   - ./service:/var/www/html
+    environment:
+      APP_KEY: base64:DwKEvaOndVM7y64k8G1AZkjm/WkeKV3IyGsgf0tN9Uw=
