--- a/config/nginx/default.conf
+++ b/config/nginx/default.conf
@@ -20,7 +20,7 @@ server {
     location = /favicon.ico { access_log off; log_not_found off; }
 
     location ~ \.php$ {
-        fastcgi_pass app:9000;
+        fastcgi_pass php-app:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         include fastcgi_params;
