Add upstream configuration for php-fpm

--- a/config/nginx/default.conf
+++ b/config/nginx/default.conf
@@ -1,4 +1,6 @@
-
+upstream php-fpm {
+  server php-app:9000;
+}
 server {
     listen 80;
     server_name localhost;
@@ -20,7 +22,7 @@ server {
     location = /favicon.ico { access_log off; log_not_found off; }
 
     location ~ \.php$ {
-        fastcgi_pass php-app:9000;
+        fastcgi_pass php-fpm;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         include fastcgi_params;
