Update fastcgi_pass to use IP address instead of upstream name

--- a/config/nginx/default.conf
+++ b/config/nginx/default.conf
@@ -1,6 +1,3 @@
-upstream php-fpm {
-  server php-app:9000;
-}
 server {
     listen 80;
     server_name localhost;
@@ -22,7 +19,7 @@ server {
     location = /favicon.ico { access_log off; log_not_found off; }
 
     location ~ \.php$ {
-        fastcgi_pass php-fpm;
+        fastcgi_pass 127.0.0.1:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         include fastcgi_params;
