--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,25 @@
 version: "3.8"
 services:
   web:
-    image: app-nginx
+    image: 720749898583.dkr.ecr.ap-northeast-1.amazonaws.com/nginx:v1.5.2
+    container_name: nginx-web
     platform: linux/amd64
-    container_name: web
     ports:
       - "80:80"
+    volumes:
+      - ./config/nginx/local.default.conf:/etc/nginx/conf.d/default.conf
   php:
-    image: 720749898583.dkr.ecr.ap-northeast-1.amazonaws.com/php:v1.2
+    image: 720749898583.dkr.ecr.ap-northeast-1.amazonaws.com/php:v1.5.2
+    container_name: php-app
     platform: linux/amd64
-    container_name: app
-    environment:
-      APP_KEY: base64:DwKEvaOndVM7y64k8G1AZkjm/WkeKV3IyGsgf0tN9Uw=
+    env_file:
+      - ./service/.env
+  composer:
+    image: composer:latest
+    container_name: composer
+    volumes:
+      - ./service:/var/www/html
+    working_dir: /var/www/html
+    command: composer install
+    depends_on:
+      - php
