--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.8"
 services:
   web:
-    image: 720749898583.dkr.ecr.ap-northeast-1.amazonaws.com/nginx:v1.5.2
+    image: 720749898583.dkr.ecr.ap-northeast-1.amazonaws.com/base-nginx:1.25.3-alpine
     container_name: nginx-web
     platform: linux/amd64
     ports:
@@ -9,11 +9,12 @@ services:
     volumes:
       - ./config/nginx/local.default.conf:/etc/nginx/conf.d/default.conf
   php:
-    image: 720749898583.dkr.ecr.ap-northeast-1.amazonaws.com/php:v1.5.2
+    image: 720749898583.dkr.ecr.ap-northeast-1.amazonaws.com/base-php:8.2.13
     container_name: php-app
     platform: linux/amd64
-    env_file:
-      - ./service/.env
+    volumes:
+      - ./service:/var/www/html
+    working_dir: /var/www/html
   composer:
     image: composer:latest
     container_name: composer
