--- a/config/nginx/local.default.conf
+++ b/config/nginx/local.default.conf
@@ -9,14 +9,23 @@ server {
     add_header X-XSS-Protection "1; mode=block";
     add_header X-Content-Type-Options "nosniff";
 
-
     index index.php;
 
+    set_real_ip_from 0.0.0.0/0;
+    real_ip_header X-Forwarded-For;
+
     location / {
+        add_header Cache-Control "no-cache, no-store, max-age=0, must-revalidate" always;
+        add_header Pragma "no-cache" always;
         try_files $uri $uri/ /index.php?$query_string;
     }
 
     location = /favicon.ico { access_log off; log_not_found off; }
+
+    location ~* \.(js|css)$ {
+        expires 1d;
+        add_header Cache-Control "public, immutable";
+    }
 
     location ~ \.php$ {
         fastcgi_pass php-app:9000;
