--- a/web/nginx/default.conf
+++ b/web/nginx/default.conf
@@ -3,7 +3,7 @@ server {
     server_name localhost;
 
     charset utf-8;
-    root /var/www/html;
+    root /var/www/html/service/public;
 
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-XSS-Protection "1; mode=block";
@@ -14,18 +14,29 @@ server {
     set_real_ip_from 0.0.0.0/0;
     real_ip_header X-Forwarded-For;
 
-    location / {
-        add_header Cache-Control "no-cache, no-store, max-age=0, must-revalidate" always;
-        add_header Pragma "no-cache" always;
-        ## vue-router history mode
-        try_files $uri $uri/ /index.html;
-    }
-
     location = /favicon.ico { access_log off; log_not_found off; }
 
     location ~* \.(js|css)$ {
         expires 1d;
         add_header Cache-Control "public, immutable";
+    }
+
+    location /api {
+        try_files $uri $uri/ /index.php?$query_string;
+    }
+
+    location / {
+        add_header Cache-Control "no-cache, no-store, max-age=0, must-revalidate" always;
+        add_header Pragma "no-cache" always;
+        root /var/www/html;
+        try_files $uri $uri/ /index.html;
+    }
+
+     location ~ \.php$ {
+        fastcgi_pass 127.0.0.1:9000;
+        fastcgi_index index.php;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        include fastcgi_params;
     }
 
     location ~ /\.(?!well-known).* {
