Add Dockerignore file and update Dockerfile.app

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,7 +18,7 @@ phases:
       - echo PHP Building the Docker image for AMD64 architecture...
       - docker buildx build --platform linux/amd64 -t $IMAGE_REPO_NAME:$IMAGE_TAG . --push
       - echo Nginx Building the Docker image for AMD64 architecture...
-      - docker buildx build --platform linux/amd64 -t $NGINX_IMAGE_REPO_NAME:$IMAGE_TAG -f NginxDockerfile . --push
+      - docker buildx build --platform linux/amd64 -t $NGINX_IMAGE_REPO_NAME:$IMAGE_TAG -f Docker.app . --push
   post_build:
     commands:
       - echo Writing image definitions file...
