--- a/config/nginx/app.conf
+++ b/config/nginx/app.conf
@@ -3,7 +3,7 @@ server {
     server_name localhost;
 
     charset utf-8;
-    root /var/www/html/service/public;
+    root /var/www/html/public;
 
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-XSS-Protection "1; mode=block";
@@ -17,23 +17,23 @@ server {
     location = /favicon.ico { access_log off; log_not_found off; }
 
     location ~* \.(js|css)$ {
-        expires 1d;
-        add_header Cache-Control "public, immutable";
-    }
-
-    location /api {
-        try_files $uri $uri/ /index.php?$query_string;
+        add_header Cache-Control "no-cache, no-store, max-age=0, must-revalidate" always;
+        add_header Pragma "no-cache" always;
     }
 
     location / {
         add_header Cache-Control "no-cache, no-store, max-age=0, must-revalidate" always;
         add_header Pragma "no-cache" always;
-        root /var/www/html;
         try_files $uri $uri/ /index.html;
     }
-
+    
+    location /api {
+      index index.php index.html index.htm;
+      try_files $uri $uri/ /index.php?$query_string;
+    }
+    
      location ~ \.php$ {
-        fastcgi_pass 127.0.0.1:9000;
+        fastcgi_pass php-app:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         include fastcgi_params;
