Update Nginx configuration

--- a/config/nginx/app.conf
+++ b/config/nginx/app.conf
@@ -26,6 +26,13 @@ server {
         add_header Pragma "no-cache" always;
         try_files $uri $uri/ /index.html;
     }
+
+    location /sanctum/csrf-cookie {
+      add_header Cache-Control "no-cache, no-store, max-age=0, must-revalidate" always;
+      add_header Pragma "no-cache" always;
+      index index.php index.html index.htm;
+      try_files $uri $uri/ /index.php?$query_string;
+    }
     
     location /api {
       index index.php index.html index.htm;
