--- a/config/nginx/local.conf
+++ b/config/nginx/local.conf
@@ -3,7 +3,7 @@ server {
     server_name localhost;
 
     charset utf-8;
-    root /var/www/html;
+    root /var/www/html/public;
 
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-XSS-Protection "1; mode=block";
@@ -26,20 +26,25 @@ server {
         add_header Pragma "no-cache" always;
         try_files $uri $uri/ /index.html;
     }
-
-    location /api {
-        root /var/www/laravel/public;
-        index index.php index.html index.htm;
-        try_files $uri $uri/ /index.php?$query_string;
-
-        location ~ \.(php)(/.*)?$ {
-            fastcgi_pass php-app:9000;
-            fastcgi_index index.php;
-            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-            include fastcgi_params;
-        }
+    
+    location /sanctum/csrf-cookie {
+      add_header Cache-Control "no-cache, no-store, max-age=0, must-revalidate" always;
+      add_header Pragma "no-cache" always;
+      index index.php index.html index.htm;
+      try_files $uri $uri/ /index.php?$query_string;
     }
-
+    
+    location /api {
+      index index.php index.html index.htm;
+      try_files $uri $uri/ /index.php?$query_string;
+    }
+    
+     location ~ \.php$ {
+        fastcgi_pass php-app:9000;
+        fastcgi_index index.php;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        include fastcgi_params;
+    }
 
     location ~ /\.(?!well-known).* {
         deny all;
