--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,15 @@
 version: "3.8"
 services:
   web:
-    image: 720749898583.dkr.ecr.ap-northeast-1.amazonaws.com/base-nginx:1.25.3-alpine
+    image: 720749898583.dkr.ecr.ap-northeast-1.amazonaws.com/nginx:v1.7.3
     container_name: nginx-web
     platform: linux/amd64
     ports:
       - "80:80"
     volumes:
-      - ./config/nginx/local.default.conf:/etc/nginx/conf.d/default.conf
-      - ./service:/var/www/html
+      - ./config/nginx/local.conf:/etc/nginx/conf.d/default.conf
+      # - ./service:/var/www/html
+      # - ./web/dist:/var/www/html/public
   php:
     image: 720749898583.dkr.ecr.ap-northeast-1.amazonaws.com/base-php:8.2.13
     container_name: php-app
