--- a/service/composer.json
+++ b/service/composer.json
@@ -46,6 +46,12 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "lint": [
+            "pint --test"
+        ],
+        "lint:fix": [
+            "pint"
         ]
     },
     "extra": {
