--- a/.github/workflows/feature-check.yml
+++ b/.github/workflows/feature-check.yml
@@ -19,6 +19,18 @@ jobs:
         with:
           php-version: "8.2"
 
+      - name: Get Composer Cache Directory
+        id: composer-cache
+        run: echo "::set-output name=dir::$(composer config cache-files-dir)"
+
+      - name: Cache Composer Dependencies
+        uses: actions/cache@v3
+        with:
+          path: ${{ steps.composer-cache.outputs.dir }}
+          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-composer-
+
       - name: Install dependencies
         run: composer install --no-progress --no-suggest --prefer-dist
 
