--- a/.github/workflows/feature-check.yml
+++ b/.github/workflows/feature-check.yml
@@ -4,7 +4,7 @@ on:
     branches: [feature/*]
     paths:
       - "service/**"
-      - ".github/workflows/**"
+      - ".github/workflows/feature-check.yml"
   workflow_dispatch:
 
 defaults:
